--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Dev'Coffee",
+  "name": "PWA_APP",
   "short_name": "DevCoffee",
   "start_url": "index.html",
   "display": "standalone",
