--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,17 @@
 {
-  "name": "PWA_APP",
+  "name": "Dev'Coffee",
   "short_name": "DevCoffee",
   "start_url": "index.html",
   "display": "standalone",
   "background_color": "#fdfdfd",
   "theme_color": "#db4938",
-  "orientation": "portrait-primary"
+  "orientation": "portrait-primary",
+
+  "icons":[
+    {
+      "src": "icon.png",
+      "type": "image/png",
+      "sizes": "144x144"
+    }
+  ]
 }
